apps/base/flux-system/addons/webhook/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
spec:
  ingressClassName: external
  rules:
    - host: flux-webhook-${CLUSTER}.${SECRET_DOMAIN}
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
